# svelte-cli

./: Cargo.toml  README.md
.github/workflows/: pr.yaml
src/: config.rs  lib.rs  main.rs  opts.rs  setup.rs  svelte.rs  templates.rs
src/temp/: page.server.ts  page_server.rs
