[package]
name = "sveltecli"
version = "0.1.1"
edition = "2021"
authors = ["Mateusz Piórowski <mateuszpiorowski@gmail.com>"]
license = "MIT"
description = "Svelte is a simple CLI tool for prototyping and developing Svelte components."
readme = "README.md"
homepage = "https://github.com/mpiorowski/svelte-cli"
repository = "https://github.com/mpiorowski/svelte-cli"
keywords = ["cli", "utilities", "svelte-cli", "svelte", "sveltekit"]
categories = ["command-line-utilities"]

[[bin]]
name = "sv"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
